# lannbrary

./: CMakeLists.txt  lannbrary.pro
Builds/LannbraryProject/: .qmake.stash
Builds/LannbraryProject/LannbraryExec/: LannbraryExec
LannbraryProject/: LannbraryProject.pro
LannbraryProject/Lannbrary/: Lannbrary.cpp  Lannbrary.h  Lannbrary.pro  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h
LannbraryProject/LannbraryExec/: LannbraryExec.pro  main.cpp
examples/data/: model_or.lann
include/: NeuralNetwork.h  Neuron.h
src/: NeuralNetwork.cpp  main.cpp  neuron.cpp
